--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -1,15 +1,9 @@
 <%= image_tag (@profile.picture_url(:standard)) %>
 <p id="notice"><%= notice %></p>
 
-<p>
-  <strong>First name:</strong>
-  <%= @profile.first_name %>
-</p>
-
-<p>
-  <strong>Last name:</strong>
-  <%= @profile.last_name %>
-</p>
+<h2>
+    <%= @profile.first_name %> <%= @profile.last_name %>
+</h2>
 
 
 <p>
@@ -63,8 +57,8 @@
 </p>
 
 <p>
-  <strong>User:</strong>
-  <%= @profile.user %>
+  <strong>Email:</strong>
+  <%= @profile.user.email %>
 </p>
 
 <p>
